Fixed ligth/dark mode system pref handling

--- a/components/elements/footer/footer.module.css
+++ b/components/elements/footer/footer.module.css
@@ -2,4 +2,5 @@
 	padding-top: 0.5rem/* 8px */;
 	padding-bottom: 0.5rem/* 8px */;
 	background-color: hsl(var(--background));
+	color: hsl(var(--foreground));
 }
