--- a/components/elements/main/main.module.css
+++ b/components/elements/main/main.module.css
@@ -1,6 +1,7 @@
 .main {
 	min-height: 100vh;
 	background-color: hsl(var(--background));
+	color: hsl(var(--foreground));
 	display: flex;
 	flex-direction: column;
 	align-items: center;
